[package]
name = "ext_fltk_app"
version = "0.1.0"
edition = "2021"


# [profile.release]
# lto = true
# opt-level='z'
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.4", features = ["fltk-bundled"] }
fltk-theme = "0.7.1"
